Complete rebrand to emblem.io across all assets
- Update page title from 'Emblem.NLP' to 'emblem.io'
- Update header logo and navigation branding
- Update footer section headers and copyright
- Update all email addresses from admin@emblemprojects.com to admin@emblem.io
- Maintain consistent lowercase styling for modern brand identity
- All company references now reflect emblem.io branding

--- a/emblem-nlp-landing.html
+++ b/emblem-nlp-landing.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Emblem.NLP - Enterprise AI Orchestration & Multimedia Generation</title>
+  <title>emblem.io - Enterprise AI Orchestration & Multimedia Generation</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700;800;900&family=Inter:wght@300;400;500;600;700&family=Space+Grotesk:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap');
 
@@ -733,7 +733,7 @@
   <header class="header">
     <nav class="nav">
       <div class="container" style="display: flex; justify-content: space-between; align-items: center; width: 100%;">
-        <div class="logo">Emblem.NLP</div>
+        <div class="logo">emblem.io</div>
         <ul class="nav-links">
           <li><a href="#problem">Challenge</a></li>
           <li><a href="#solution">Solution</a></li>
@@ -1261,7 +1261,7 @@
           </div>
         </div>
 
-        <a href="mailto:admin@emblemprojects.com?subject=Strategic Partnership Assessment - Q1 2026&body=I'm interested in learning more about the Q1 2026 Strategic Partnership Program for mid-sized agencies. Please schedule my 15-minute qualification call." class="cta-primary" style="font-size: 18px; padding: 20px 40px;">
+        <a href="mailto:admin@emblem.io?subject=Strategic Partnership Assessment - Q1 2026&body=I'm interested in learning more about the Q1 2026 Strategic Partnership Program for mid-sized agencies. Please schedule my 15-minute qualification call." class="cta-primary" style="font-size: 18px; padding: 20px 40px;">
           Schedule Strategic Assessment - 6 Slots Remaining
           <span>→</span>
         </a>
@@ -1280,7 +1280,7 @@
     <div class="container">
       <div class="footer-content">
         <div class="footer-section">
-          <h4>Emblem.NLP Strategic Partnerships</h4>
+          <h4>emblem.io Strategic Partnerships</h4>
           <p>
             Eliminate AI inconsistency. Scale quality output. Achieve measurable ROI through production-ready MCP orchestration.
           </p>
@@ -1303,17 +1303,17 @@
         <div class="footer-section">
           <h4>Resources</h4>
           <ul>
-            <li><a href="mailto:admin@emblemprojects.com?subject=Case Studies Request">Client Case Studies</a></li>
-            <li><a href="mailto:admin@emblemprojects.com?subject=ROI Calculator">Custom ROI Calculator</a></li>
-            <li><a href="mailto:admin@emblemprojects.com?subject=Implementation Guide">Implementation Guide</a></li>
-            <li><a href="mailto:admin@emblemprojects.com?subject=Technical Documentation">MCP Documentation</a></li>
+            <li><a href="mailto:admin@emblem.io?subject=Case Studies Request">Client Case Studies</a></li>
+            <li><a href="mailto:admin@emblem.io?subject=ROI Calculator">Custom ROI Calculator</a></li>
+            <li><a href="mailto:admin@emblem.io?subject=Implementation Guide">Implementation Guide</a></li>
+            <li><a href="mailto:admin@emblem.io?subject=Technical Documentation">MCP Documentation</a></li>
           </ul>
         </div>
         
         <div class="footer-section">
           <h4>Contact</h4>
           <ul>
-            <li><a href="mailto:admin@emblemprojects.com">admin@emblemprojects.com</a></li>
+            <li><a href="mailto:admin@emblem.io">admin@emblem.io</a></li>
             <li><strong style="color: var(--primary-gold);">Strategic Partnerships:</strong><br>Direct CEO access for qualified agencies</li>
             <li><strong style="color: var(--electric-blue);">Technical Support:</strong><br>24/7 enterprise-grade assistance</li>
           </ul>
@@ -1321,7 +1321,7 @@
       </div>
       
       <div class="footer-bottom">
-        <p>&copy; 2025 Emblem.NLP Strategic Partnership Program. Q1 2026 Limited Enrollment - 6 Slots Remaining.</p>
+        <p>&copy; 2025 emblem.io Strategic Partnership Program. Q1 2026 Limited Enrollment - 6 Slots Remaining.</p>
       </div>
     </div>
   </footer>
