Transform to multi-million dollar video post-production studio
Header CTA Updates:
- Replace computer setup with professional studio lighting equipment (Pexels ID: 257904)
- Update hero content to 'Multi-Million Dollar Post-Production Excellence'
- Change CTA from 'Schedule Strategic Assessment' to 'Book Studio Tour'

Final CTA Updates:
- Replace team collaboration with professional camera rig setup (Pexels ID: 8981855)
- Update content to 'Premium Studio Bookings Available'
- Change focus from partnerships to studio facility access

Social Proof Updates:
- Replace AI/tech clients with A-list production companies
- Update metrics from efficiency gains to box office success
- Replace Microsoft Partner with Emmy Award-winning credentials
- Add Marvel Studios, Netflix Originals, HBO Max as client examples

Complete brand transformation from AI consulting to premium video post-production facility

--- a/emblem-nlp-landing.html
+++ b/emblem-nlp-landing.html
@@ -12,7 +12,7 @@
       --electric-blue: #00d4ff;
       --dark-bg: #0a0a0a;
       --card-bg: #1a1a1a;
-      --text-light: #e0e0e0;
+      --text-light: #311313;
       --primary-skew: 2deg;
       --hover-skew: -1deg;
       --perspective: 1000px;
@@ -44,7 +44,7 @@
     .header {
       background: 
         linear-gradient(135deg, rgba(0,0,0,0.80) 0%, rgba(26,26,26,0.85) 50%, rgba(0,0,0,0.90) 100%),
-        url('https://images.pexels.com/photos/4792731/pexels-photo-4792731.jpeg?auto=compress&cs=tinysrgb&w=1920&h=1280&fit=crop') center/cover;
+        url('https://images.pexels.com/photos/257904/pexels-photo-257904.jpeg?auto=compress&cs=tinysrgb&w=1920&h=1280&fit=crop') center/cover;
       color: #fff;
       position: relative;
       overflow: hidden;
@@ -745,18 +745,18 @@
 
     <div class="hero">
       <div class="container">
-        <h1>Eliminate AI Inconsistency. Scale Quality Output. Achieve 3.7x ROI.</h1>
-        <div class="subtitle">Stop losing 40% of project time to AI rework cycles</div>
+        <h1>Multi-Million Dollar Post-Production Excellence. Delivered.</h1>
+        <div class="subtitle">Hollywood-grade facilities for your premium content</div>
         <p class="description">
-          Our MCP orchestration platform delivers predictable, brand-aligned outputs from ChatGPT, Claude, and Midjourney. 
-          No more AI lottery. No more revision hell. Just consistent, scalable results.
+          State-of-the-art video post-production studio with cutting-edge equipment, award-winning colorists, and seamless workflow integration. 
+          From concept to final delivery, we transform your vision into cinematic reality.
         </p>
         <a href="#assessment" class="cta-primary">
-          Schedule Strategic Assessment
+          Book Studio Tour
           <span>→</span>
         </a>
         <p style="margin-top: 16px; font-size: 14px; color: #b0b0b0; font-style: italic;">
-          15-minute qualification call available this week
+          Private facility tours available this week
         </p>
       </div>
     </div>
@@ -766,13 +766,13 @@
       <div class="container">
         <div style="text-align: center; color: var(--text-light); font-family: 'Outfit', sans-serif;">
           <div style="font-size: 14px; margin-bottom: 8px; font-weight: 500;">
-            Trusted by 15+ Mid-Sized Agencies | $2.4M+ in Documented Efficiency Gains | Microsoft MCP Partner
+            Trusted by A-List Productions | $50M+ in Box Office Success | Emmy Award-Winning Team
           </div>
           <div style="display: flex; justify-content: center; gap: 30px; align-items: center; flex-wrap: wrap; opacity: 0.7;">
-            <span style="font-size: 12px; padding: 4px 12px; border: 1px solid rgba(212,175,55,0.3); border-radius: 20px;">BrandMax Agency</span>
-            <span style="font-size: 12px; padding: 4px 12px; border: 1px solid rgba(212,175,55,0.3); border-radius: 20px;">Digital Innovations Co.</span>
-            <span style="font-size: 12px; padding: 4px 12px; border: 1px solid rgba(212,175,55,0.3); border-radius: 20px;">Growth Partners LLC</span>
-            <span style="font-size: 12px; padding: 4px 12px; border: 1px solid rgba(0,212,255,0.3); border-radius: 20px; color: var(--electric-blue);">Microsoft Partner</span>
+            <span style="font-size: 12px; padding: 4px 12px; border: 1px solid rgba(212,175,55,0.3); border-radius: 20px;">Marvel Studios</span>
+            <span style="font-size: 12px; padding: 4px 12px; border: 1px solid rgba(212,175,55,0.3); border-radius: 20px;">Netflix Originals</span>
+            <span style="font-size: 12px; padding: 4px 12px; border: 1px solid rgba(212,175,55,0.3); border-radius: 20px;">HBO Max</span>
+            <span style="font-size: 12px; padding: 4px 12px; border: 1px solid rgba(0,212,255,0.3); border-radius: 20px; color: var(--electric-blue);">Emmy Winners</span>
           </div>
         </div>
       </div>
@@ -1225,17 +1225,17 @@
   </section>
 
   <!-- Final CTA Section -->
-  <section id="assessment" style="background: linear-gradient(135deg, rgba(26,26,26,0.85) 0%, rgba(0,0,0,0.90) 100%), url('https://images.pexels.com/photos/3184438/pexels-photo-3184438.jpeg?auto=compress&cs=tinysrgb&w=1920&h=1280&fit=crop') center/cover; color: #fff; padding: 100px 0; position: relative;">
+  <section id="assessment" style="background: linear-gradient(135deg, rgba(26,26,26,0.85) 0%, rgba(0,0,0,0.90) 100%), url('https://images.pexels.com/photos/8981855/pexels-photo-8981855.jpeg?auto=compress&cs=tinysrgb&w=1920&h=1280&fit=crop') center/cover; color: #fff; padding: 100px 0; position: relative;">
     <div class="container">
       <div style="max-width: 700px; margin: 0 auto; text-align: center;">
         <h2 style="font-family: 'Outfit', sans-serif; font-size: clamp(2.5rem, 5vw, 3.5rem); font-weight: 700; margin-bottom: 24px; color: var(--primary-gold);">
-          Strategic Partnerships Close January 31st
+          Premium Studio Bookings Available
         </h2>
         <p style="font-size: 20px; color: var(--text-light); margin-bottom: 16px;">
-          Join the exclusive network of mid-sized agencies gaining 6-month competitive advantages through MCP orchestration.
+          Experience cinematic excellence in our state-of-the-art post-production facility designed for the world's most demanding projects.
         </p>
         <div style="font-size: 18px; color: #dc3545; font-weight: 600; margin-bottom: 40px;">
-          🚨 Only 6 partnership slots remain for Q1 2026
+          🎬 Limited availability for Q1 2026 premium bookings
         </div>
 
         <!-- What Happens Next -->
