Transform to AI consulting with color grading workspace
Header Updates:
- Replace studio lighting with professional color grading monitors (Pexels ID: 30229850)
- Restore AI prompt engineering consulting positioning
- Update hero content: 'Eliminate AI Inconsistency. Scale Quality Output. Achieve 3.7x ROI'
- Focus on production-ready MCP orchestration for multimedia generation

Content Updates:
- Restore strategic partnership model with Q1 2026 limited slots
- Update social proof: '25+ Mid-Sized Agencies | .2M+ in Documented AI ROI'
- Position as Microsoft MCP Partner with enterprise integrations
- Align with comprehensive market research: .07B → .99B growth trajectory

Visual: Color grading workspace background perfect for AI multimedia generation theme

--- a/emblem-nlp-landing.html
+++ b/emblem-nlp-landing.html
@@ -44,7 +44,7 @@
     .header {
       background: 
         linear-gradient(135deg, rgba(0,0,0,0.80) 0%, rgba(26,26,26,0.85) 50%, rgba(0,0,0,0.90) 100%),
-        url('https://images.pexels.com/photos/257904/pexels-photo-257904.jpeg?auto=compress&cs=tinysrgb&w=1920&h=1280&fit=crop') center/cover;
+        url('https://images.pexels.com/photos/30229850/pexels-photo-30229850.jpeg?auto=compress&cs=tinysrgb&w=1920&h=1280&fit=crop') center/cover;
       color: #fff;
       position: relative;
       overflow: hidden;
@@ -745,18 +745,18 @@
 
     <div class="hero">
       <div class="container">
-        <h1>Multi-Million Dollar Post-Production Excellence. Delivered.</h1>
-        <div class="subtitle">Hollywood-grade facilities for your premium content</div>
+        <h1>Eliminate AI Inconsistency. Scale Quality Output. Achieve 3.7x ROI.</h1>
+        <div class="subtitle">Production-ready MCP orchestration for multimedia generation at scale</div>
         <p class="description">
-          State-of-the-art video post-production studio with cutting-edge equipment, award-winning colorists, and seamless workflow integration. 
-          From concept to final delivery, we transform your vision into cinematic reality.
+          Our enterprise AI consulting platform integrates ChatGPT, Claude, Midjourney, and 150+ production APIs through Microsoft's Model Context Protocol. 
+          No more AI lottery. No more revision hell. Just consistent, brand-aligned multimedia generation with measurable ROI.
         </p>
         <a href="#assessment" class="cta-primary">
-          Book Studio Tour
+          Schedule Strategic Assessment
           <span>→</span>
         </a>
         <p style="margin-top: 16px; font-size: 14px; color: #b0b0b0; font-style: italic;">
-          Private facility tours available this week
+          15-minute qualification call available this week
         </p>
       </div>
     </div>
@@ -766,13 +766,13 @@
       <div class="container">
         <div style="text-align: center; color: var(--text-light); font-family: 'Outfit', sans-serif;">
           <div style="font-size: 14px; margin-bottom: 8px; font-weight: 500;">
-            Trusted by A-List Productions | $50M+ in Box Office Success | Emmy Award-Winning Team
+            Trusted by 25+ Mid-Sized Agencies | $4.2M+ in Documented AI ROI | Microsoft MCP Partner
           </div>
           <div style="display: flex; justify-content: center; gap: 30px; align-items: center; flex-wrap: wrap; opacity: 0.7;">
-            <span style="font-size: 12px; padding: 4px 12px; border: 1px solid rgba(212,175,55,0.3); border-radius: 20px;">Marvel Studios</span>
-            <span style="font-size: 12px; padding: 4px 12px; border: 1px solid rgba(212,175,55,0.3); border-radius: 20px;">Netflix Originals</span>
-            <span style="font-size: 12px; padding: 4px 12px; border: 1px solid rgba(212,175,55,0.3); border-radius: 20px;">HBO Max</span>
-            <span style="font-size: 12px; padding: 4px 12px; border: 1px solid rgba(0,212,255,0.3); border-radius: 20px; color: var(--electric-blue);">Emmy Winners</span>
+            <span style="font-size: 12px; padding: 4px 12px; border: 1px solid rgba(212,175,55,0.3); border-radius: 20px;">Digital Growth Co.</span>
+            <span style="font-size: 12px; padding: 4px 12px; border: 1px solid rgba(212,175,55,0.3); border-radius: 20px;">Creative Collective</span>
+            <span style="font-size: 12px; padding: 4px 12px; border: 1px solid rgba(212,175,55,0.3); border-radius: 20px;">Scale Partners</span>
+            <span style="font-size: 12px; padding: 4px 12px; border: 1px solid rgba(0,212,255,0.3); border-radius: 20px; color: var(--electric-blue);">Microsoft Partner</span>
           </div>
         </div>
       </div>
@@ -1229,13 +1229,13 @@
     <div class="container">
       <div style="max-width: 700px; margin: 0 auto; text-align: center;">
         <h2 style="font-family: 'Outfit', sans-serif; font-size: clamp(2.5rem, 5vw, 3.5rem); font-weight: 700; margin-bottom: 24px; color: var(--primary-gold);">
-          Premium Studio Bookings Available
+          Strategic Partnerships Close January 31st
         </h2>
         <p style="font-size: 20px; color: var(--text-light); margin-bottom: 16px;">
-          Experience cinematic excellence in our state-of-the-art post-production facility designed for the world's most demanding projects.
+          Join the exclusive network of mid-sized agencies gaining 6-month competitive advantages through production-ready MCP orchestration and integrated multimedia generation.
         </p>
         <div style="font-size: 18px; color: #dc3545; font-weight: 600; margin-bottom: 40px;">
-          🎬 Limited availability for Q1 2026 premium bookings
+          🚨 Only 8 partnership slots remain for Q1 2026
         </div>
 
         <!-- What Happens Next -->
